<resources>
    <string name="app_name">MovileNext_Lesson4_LoginApp</string>
    <string name="hello_world">Hello World!</string>
    <string name="email_hint">Type your e-mail</string>
    <string name="password_hint">Type your password</string>
    <string name="login_button">Login</string>
    <string name="login_fail">Login Failed</string>
    <string name="missing_fields">Missing Fields</string>
</resources>
